[dependencies]
clap = '3.1.18'
itertools-num = '0.1.3'
num = '0.4.0'
rayon = '1.5.3'
rustfft = '6.0.1'
serde_yaml = '0.8.24'

[dependencies.ndarray]
features = ['rayon']
version = '0.15.4'

[dependencies.ndarray-npy]
default-features = true
version = '0.8.1'

[dependencies.serde]
features = ['derive']
version = '1.0.137'

[package]
edition = '2021'
name = 'rsdsp'
version = '0.1.0'
