[dependencies]
clap = {version='4.5.4', features=["derive"]}
itertools-num = '0.1.3'
rayon = '1.10.0'
rustfft = '6.2.0'
serde_yaml = '0.9.34+deprecated'

[dependencies.ndarray]
features = ['rayon']
version = '0.15.6'

[dependencies.ndarray-npy]
default-features = true
version = '0.8.1'

[dependencies.num]
features = ['serde']
version = '0.4.1'

[dependencies.serde]
features = ['derive']
version = '1.0.197'

[package]
edition = '2021'
name = 'rsdsp'
version = '0.1.0'
